# todo-list-tauri

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: TodoApp.vue
